Weather_app - layout bugfix

--- a/web/css/modal-menu.css
+++ b/web/css/modal-menu.css
@@ -31,7 +31,7 @@
 .page-modal-latest-towns {
     position: relative;
     display: grid;
-    grid-template-rows: auto calc(100% - 73px);
+    grid-template-rows: min-content calc(100% - 53px);
     grid-gap: 15px;
     max-width: 800px;
     max-height: 370px;
@@ -65,6 +65,7 @@
 .page-modal-settings__label,
 .page-modal-favorite-towns__label,
 .page-modal-latest-towns__label {
+    font-size: 30px;
     margin: 0;
     white-space: nowrap;
     max-width: calc(100% - 24px);
@@ -125,7 +126,9 @@
     transition: .2s ease;
 }
 .settings-content-button:hover,
-.settings-content-button:focus {
+.settings-content-button:focus,
+.settings-button:hover,
+.settings-button:focus  {
     cursor: pointer;
     background: #44444414;
 }
@@ -138,4 +141,29 @@
     row-gap: 20px;
     overflow-y: visible;
     overflow-x: hidden;
+}
+.settins-content-block {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-family: "Sourse Sans Pro";
+}
+.settins-content-block__label {
+    margin: 0;
+    font-size: 22px;
+    color: #000000af;
+    padding: 0 0 0 10px;
+}
+.settins-content-block__elements {
+    display: flex;
+    flex-direction: column;
+}
+.settings-button {
+    padding: 10px;
+    border: none;
+    border-radius: 15px;
+    text-align: left;
+    font-size: 17px;
+    background: none;
+    transition: .2s ease;
 }
