--- a/web/css/ui-adaptivity.css
+++ b/web/css/ui-adaptivity.css
@@ -26,7 +26,7 @@
         justify-content: center;
         align-items: center;
         width: 100vw;
-        max-height: 100vh;
+        height: 100vh;
         border-radius: 0px;
         background: #fff;
         opacity: 1;
